# rustary

./: Cargo.toml  README.md
src/: books.json  lib.rs  main.rs
